Add /showusers for free access

--- a/views/visit.erb
+++ b/views/visit.erb
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <h2> To book </h2>
 	<p>We are ready to book you in for trim.</p>
  			<form class="form-inline" action="/visit" method="POST">
