--- a/views/layout.erb
+++ b/views/layout.erb
@@ -54,7 +54,7 @@
 			</nav>
 
 			<div>
-			      <%if @error then %>
+			      <%if @error && @error.length > 0 then %>
 			          <div class="alert alert-danger"><%=@error%></div>
 			      <% end %>												
 			      <%= yield %>
