--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -2,6 +2,6 @@
 <form class="form-inline" action="/contacts" method="POST">
 Email:<br>
 <input type="text" class="form-control" name="email" placeholder="Your email" ><br><br>
-<textarea name="message" class="form-control" rows="5" placeholder="Your massage" ></textarea><br><br>
+<textarea name="message" class="form-control" rows="5" placeholder="Your message" ></textarea><br><br>
 <input type="submit" class="btn btn-primary" >
 </form>
