--- a/views/admin.erb
+++ b/views/admin.erb
@@ -1,7 +1,7 @@
 <form action="/admin" method="post">
   Enter login: <br>
-  <input type=text name="login"><br>
+  <input class="form-control"type=text name="login"><br>
   Enter password: <br>
-  <input type=password name="password"><br>
-  <input type="submit" >
+  <input class="form-control" type=password name="password"><br><br>
+  <input type="submit" class="btn" >
 </form>
