--- a/views/showusers.erb
+++ b/views/showusers.erb
@@ -1,10 +1,3 @@
-<form action="/admin" method="post">
-  Enter login: <br>
-  <input type=text name="login"><br>
-  Enter password: <br>
-  <input type=password name="password"><br>
-  <input type="submit" >
-</form>
 <h1>List of users</h1>
   
   <table class="table">
@@ -30,3 +23,4 @@
   </tbody>
 
 </table>
+<a href="/logout" class="btn btn-primary">Logout</a>
