--- a/views/visit.erb
+++ b/views/visit.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <h2> To book </h2>
-	<p>We are ready to book you in for trim.</p>
+	<h4>We are ready to book you in for trim.</h4>
  			<form class="form-inline" action="/visit" method="POST">
  				Enter your name: <br>											
  				<input type="text"  class="form-control" name="name" value="<%=@name%>"><br>
